# para-compiler

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL_FILES  MANIFEST.in  Makefile  PYPI_README.md  Para.g4  ParaC-Luna-Klatzer.docx  ParaPreProcessor.g4  README.md  USAGE-README.md  _home_runner_work_Para-C_Para-C_paraccompiler___init___py.html  _home_runner_work_Para-C_Para-C_paraccompiler___main___py.html  _home_runner_work_Para-C_Para-C_paraccompiler_antlr___init___py.html  _home_runner_work_Para-C_Para-C_paraccompiler_antlr_implem___init___py.html  _home_runner_work_Para-C_Para-C_paraccompiler_antlr_implem_out_ParaCLexer_py.html  _home_runner_work_Para-C_Para-C_paraccompiler_antlr_implem_out_ParaCListener_py.html  _home_runner_work_Para-C_Para-C_paraccompiler_antlr_implem_out_ParaCParser_py.html  _home_runner_work_Para-C_Para-C_paraccompiler_antlr_implem_out___init___py.html  _home_runner_work_Para-C_Para-C_paraccompiler_antlr_implem_token_py.html  _home_runner_work_Para-C_Para-C_paraccompiler_compile_py.html  _home_runner_work_Para-C_Para-C_paraccompiler_logger_py.html  _home_runner_work_Para-C_Para-C_paraccompiler_para_exceptions_py.html  _home_runner_work_Para-C_Para-C_paraccompiler_transcompiler___init___py.html  _home_runner_work_Para-C_Para-C_paraccompiler_transcompiler_optimiser___init___py.html  _home_runner_work_Para-C_Para-C_paraccompiler_utils_py.html  build-exe.py  build.py  compile.py  compiler-cli.py  compiler.py  conanfile.txt  d_1bfc5486bd317fc0___init___py.html  d_1bfc5486bd317fc0_const_py.html  d_1bfc5486bd317fc0_exceptions_py.html  (+52 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_change.md  feature_request.md  interface--tool-or-cli-request.md  language-enhancement-request.md  language-feature-request.md
.github/workflows/: check-testing.yml  codecov.yml  (+11 more)
config/: __parac__.c  __parac__.h
config-examples/: README.md  __parac__.c  __parac__.h  compile-config.json  parac-config.json
doc/: ParaC-Luna-Klatzer.docx
docs/: requirements.txt
example/: README.md
examples/: hello-world.para  main.para
grammar/: ParaC.g4  ParaCPreProcessor.g4
img/: Compilation-Flow-Chart.drawio  Multi-Thread-Task.drawio  Para-C-Compilation-Flow-Chart.drawio  Para-C-Inclusion-Logic-Flow-Chart.drawio  README.md  Single-Thread-Task.drawio
lib/: CMakeLists.txt
lib/implementation-examples/decorator/: CMakeLists.txt  __parac__.h
modules/: .clang-format  CMakeLists.txt  README.md  library.h
modules/include/: CMakeLists.txt  pbl-function.h  pbl-int.c  pbl-int.h  pbl-io.c  pbl-types.h  pbl.c  pbl.h
modules/include/additional/: CMakeLists.txt  va-opt.h
modules/parac-modules/: CMakeLists.txt  io.c  io.h  library.h  parac_modules.h  pbl-exception.c  pbl-exception.h  pbl-function.c  pbl-function.h  pbl-int.c  pbl-int.h  pbl-io.c  pbl-io.h  pbl-main.c  pbl-main.h  pbl-mem.c  pbl-mem.h  pbl-string.c  pbl-string.h  pbl-types.c  pbl-types.h  pbl.c  pbl.h  types.c  types.h
modules/parac-modules-tests/: CMakeLists.txt
modules/parac-modules-tests/lib/gtest-1.11.0/googlemock/include/gmock/: gmock-matchers.h
modules/parac-modules-tests/lib/gtest-1.11.0/googletest/cmake/: internal_utils.cmake
modules/parac-modules-tests/tests/: CMakeLists.txt  test_exception.cpp  test_int.cpp  test_io.cpp  test_parac_modules.cpp  test_string.cpp  test_types.cpp
modules/parac-modules/included/: CMakeLists.txt
modules/tests/tests/: CMakeLists.txt  test_exception.cpp  test_string.cpp
para/: __init__.py  const.py  exceptions.py  logging.py
para-example/: main.para
parac/: __init__.py  const.py  exceptions.py  logging.py
parac-base-library/: CMakeLists.txt
parac-base-library/implementation-examples/exceptions/: CMakeLists.txt  __parac__.c  __parac__.h  exception.c
paraccompiler/: __init__.py  __main__.py  base_err_handler.py  compile.py  compiler.py  decorators.py  exceptions.py  logger.py  logging.py  para_exceptions.py  utils.py
paralang/: __init__.py  const.py  exceptions.py
paralang_base/: __init__.py  const.py  exceptions.py
preprocessor/: __init__.py  __main__.py  ctx.py  err_handler.py  error_handler.py  listener.py  logic_stream.py  logic_tokens.py
pytest/: .coveragerc  README.md  conftest.py
requirements/: common.txt  dev.txt  prod.txt
scripts/: para.py  paraproj.py  scripts.spec
src/: CONTRIBUTING.md  INSTALL_AVOID_MODULES.txt  README.md  build-exe.py  cli.py  compile-run.py  compile.py  dev-requirements.txt  entry_cli.py  main.c  main.h  parac0.1.spec  requirements.txt  setup.cfg  setup.py
win-setup/: conanfile.txt  inno-setup.iss
(+425 files in other folders)
